--- a/satlas_frontend/package.json
+++ b/satlas_frontend/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/stack": "^7.2.10",
+    "axios": "^1.8.4",
     "expo": "~52.0.43",
     "expo-font": "^13.0.4",
     "expo-linear-gradient": "~13.0.2",
@@ -22,13 +25,14 @@
     "react-dom": "^18.3.1",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "^2.25.0",
+    "react-native-reanimated": "^3.17.3",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0",
+    "react-native-svg": "^15.11.2",
     "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@expo/webpack-config": "^19.0.1",
     "@types/react": "^18.3.20",
     "@types/react-native": "^0.72.8",
     "eslint": "^9.24.0",
@@ -36,6 +40,7 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-native": "^5.0.0",
     "prettier": "^3.5.3",
+    "react-native-svg-transformer": "^1.5.0",
     "typescript": "^5.8.3"
   },
   "private": true
