--- a/satlas_frontend/package.json
+++ b/satlas_frontend/package.json
@@ -25,20 +25,26 @@
     "react-dom": "^18.3.1",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "^2.25.0",
+    "react-native-paper": "^5.13.1",
     "react-native-reanimated": "^3.17.3",
-    "react-native-safe-area-context": "^5.3.0",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
     "react-native-svg": "^15.11.2",
+    "react-native-swiper": "^1.6.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "^18.3.20",
     "@types/react-native": "^0.72.8",
+    "@types/react-native-vector-icons": "^6.4.18",
     "eslint": "^9.24.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-native": "^5.0.0",
+    "expo-yarn-workspaces": "^2.3.2",
     "prettier": "^3.5.3",
     "react-native-svg-transformer": "^1.5.0",
     "typescript": "^5.8.3"
