--- a/satlas_frontend/package.json
+++ b/satlas_frontend/package.json
@@ -14,6 +14,7 @@
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.11",
     "@react-navigation/stack": "^7.2.10",
     "axios": "^1.8.4",
     "expo": "~52.0.43",
